--- a/BinaryBytesPhone/src/main/res/values/strings.xml
+++ b/BinaryBytesPhone/src/main/res/values/strings.xml
@@ -4,12 +4,27 @@
     <string name="press_back_again_to_exit">Press Back Again to Exit</string>
     <string name="menu">Information</string>
 
-    <string name="updateAvailable">New Update Available | Click Here to Install…!</string>
-    <string name="rate">Please Rate &amp; Write Review</string>
     <string name="supportTitle">Support Center</string>
     <string name="supportDesc">Help &amp; Feedback</string>
     <string name="support">Support@GeeksEmpire.net</string>
     <string name="feedback_tag">Binary Bytes Direct Help | Feedback</string>
     <string name="alphaTitle">Thanks for Helping me</string>
+
+    <string name="high_score">Best</string>
+    <string name="score">Score</string>
+    <string name="you_win">You Win!</string>
+    <string name="game_over">Game Over!</string>
+    <string name="go_on">Tap to Continue</string>
+    <string name="for_now">For now…</string>
+    <string name="endless">"Endless" Mode</string>
+    <string name="reset">New Game</string>
+    <string name="continue_game">Continue</string>
+    <string name="reset_dialog_title">Reset to New Game</string>
+    <string name="reset_dialog_message">Are You Sure to Reset the Game?</string>
+    <string name="closemsg">Do you want to Stop Playing?</string>
+    <string name="yes">Yes</string>
+
+    <string name="updateAvailable">New Update Available | Click Here to Install…!</string>
+    <string name="rate">Please Rate &amp; Write Review</string>
 
 </resources>
